--- a/app/src/main/res/layout/activity_edit_tweet.xml
+++ b/app/src/main/res/layout/activity_edit_tweet.xml
@@ -6,7 +6,20 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="ca.ualberta.cs.lonelytwitter.EditTweetActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/etTweet"
+        android:editable="false"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save Tweet"
+        android:id="@+id/btnSaveTweet"
+        android:layout_below="@+id/etTweet"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
